<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Festivals</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="category_si">시</string>
    <string name="category_do">도</string>
    <string name="do_gyeonggi">경기도</string>
    <string name="do_gangwon">강원도</string>
    <string name="do_gyeongsangnam">경상남도</string>
    <string name="do_gyeongsangbuk">경상북도</string>
    <string name="do_chungcheongbuk">충청북도</string>
    <string name="do_chungcheongnam">충청남도</string>
    <string name="do_jeju">제주도</string>
    <string name="do_jeollanam">전라남도</string>
    <string name="do_jeollabuk">전라북도</string>
    <string name="si_seoul">서울</string>
    <string name="si_incheon">인천</string>
    <string name="si_busan">부산</string>
    <string name="si_ulsan">울산</string>
    <string name="si_daejeon">대전</string>
    <string name="si_daegu">대구</string>
    <string name="si_gwangju">광주</string>
    <string name="category_festival_appointment">일정</string>
    <string name="category_festival_place">장소</string>
    <string name="category_festival_introduce">소개</string>
    <string name="title_activity_festival_info">FestivalInfoActivity</string>
    <string name="splash_logo">Festivals Application</string>

</resources>